# openrelik-worker-eztools

./: Dockerfile  README.md  pyproject.toml
src/: app.py  mftecmd_task.py  tasks.py
tests/: test_mftecmd_task.py
