[project]
name = "openrelik-worker-eztools"
version = "0.1.0"
description = "Worker for multiple Eric Zimmermann tools"
readme = "README.md"
requires-python = "<4.0,>=3.11"
authors = [
    {name = "Alexander Jäger", email = "mail@alexanderjaeger.de"},
]
dependencies = [
    "celery[redis]<6.0.0,>=5.4.0",
    "openrelik-worker-common<1.0.0,>=0.16.0",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov<6.0.0,>=5.0.0",
    "pytest-mock<4.0.0,>=3.14.0",
]

[tool.uv]
default-groups = []
